# internal/delivery/http/handler/user_dto.go
@@ -1,0 +1,8 @@
+package handler
+
+// apiResponse Standard Response Structure
+type userResponse struct {
+	Username string `json:"username"`
+	Name     string `json:"name"`
+	Role     string `json:"role"`
+}
