# internal/delivery/router.go
@@ -1,25 +1,36 @@
 package http
 
 import (
+	"time"
+
+	"github.com/ballinwza/scraper-dashboard-be/config"
 	handler "github.com/ballinwza/scraper-dashboard-be/internal/delivery/http/handler"
 	middleware "github.com/ballinwza/scraper-dashboard-be/internal/delivery/http/middleware"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 func SetupRouter(
-	jwtSecret string,
+	cfg config.Config,
 	scraperHandler *handler.ScraperHandler,
 	rentalEstateHandler *handler.RentalEstateHandler,
-	authHandler *handler.UserHandler,
+	userHandler *handler.UserHandler,
 	ragHandler *handler.RagHandler,
 ) *gin.Engine {
 	r := gin.Default()
 
 	r.Use(middleware.RequestLogger())
 	r.Use(middleware.RecoveryMiddleware())
-	r.Use(middleware.CORSMiddleware())
+	r.Use(cors.New(cors.Config{
+		AllowOrigins:     []string{"http://localhost:3000", cfg.FEUri},
+		AllowMethods:     []string{"GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"},
+		AllowHeaders:     []string{"Origin", "Content-Type", "Accept", "Authorization", "X-Requested-With"},
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+		MaxAge:           12 * time.Hour,
+	}))
 
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
@@ -27,19 +38,26 @@ func SetupRouter(
 	{
 		authGroup := api.Group("/auth")
 		{
-			authGroup.POST("/register", authHandler.Register)
-			authGroup.POST("/login", authHandler.Login)
-			authGroup.POST("/refresh", authHandler.Refresh)
+			authGroup.POST("/register", userHandler.Register)
+			authGroup.POST("/login", userHandler.Login)
+			authGroup.POST("/logout", middleware.JWTRefreshMiddleware(cfg.JwtRefreshSecret), userHandler.Logout)
+			authGroup.POST("/refresh", middleware.JWTRefreshMiddleware(cfg.JwtRefreshSecret), userHandler.Refresh)
+		}
+
+		userGroup := api.Group("/user")
+		userGroup.Use(middleware.JWTAuthMiddleware(cfg.JwtAccessSecret))
+		{
+			userGroup.GET("/username", userHandler.GetUser)
 		}
 
 		scraperGroup := api.Group("/scraper")
-		scraperGroup.Use(middleware.JWTAuthMiddleware(jwtSecret))
+		scraperGroup.Use(middleware.JWTAuthMiddleware(cfg.JwtAccessSecret))
 		{
 			scraperGroup.POST("/rental-estate", scraperHandler.ScraperRentalEstate)
 		}
 
 		rentalEstateGroup := api.Group("/rental")
-		rentalEstateGroup.Use(middleware.JWTAuthMiddleware(jwtSecret))
+		rentalEstateGroup.Use(middleware.JWTAuthMiddleware(cfg.JwtAccessSecret))
 		{
 			rentalEstateGroup.GET("/estates", rentalEstateHandler.RentalEstates)
 			rentalEstateGroup.GET("/estates/export", rentalEstateHandler.RentalEstateExportCSV)
@@ -48,7 +66,7 @@ func SetupRouter(
 		}
 
 		ragGroup := api.Group("/rag")
-		ragGroup.Use(middleware.JWTAuthMiddleware(jwtSecret))
+		ragGroup.Use(middleware.JWTAuthMiddleware(cfg.JwtAccessSecret))
 		{
 			ragGroup.POST("/qna", ragHandler.AskQuestion)
 		}
